Restructure and fix collapsing height issue

--- a/src/blocks/modal/_bu-blocks-block-modal-base.scss
+++ b/src/blocks/modal/_bu-blocks-block-modal-base.scss
@@ -8,7 +8,7 @@
 //
 //
 
-.content-area > * { // TO DO: Move to global location
+.content-area > * { // TODO: Move to global location
 	margin-left: auto;
 	margin-right: auto;
 
@@ -17,71 +17,12 @@
 	}
 }
 
-.content-area > *.alignwide { // TO DO: Move to global location
+.content-area > *.alignwide { // TODO: Move to global location
 	max-width: 1024px;
 }
 
 .bu-blocks-modal-noscroll {
   overflow: hidden;
-}
-
-.wp-block-editorial-modal-callout {
-	@extend %col-full;
-	background: $color-grayscale-d;
-	text-align: center;
-	position: relative;
-	margin-top: 40px;
-	margin-bottom: 60px;
-
-
-	.wp-block-editorial-modal-media {
-		width: 100%;
-
-		.wp-block-editorial-modal-image {
-			display: block;
-			height: auto;
-			width: 100%;
-		}
-
-		img {
-			object-fit: cover;
-
-			&.has-background-opacity-10 {
-				opacity: .1;
-			}
-			&.has-background-opacity-20 {
-				opacity: .2;
-			}
-			&.has-background-opacity-30 {
-				opacity: .3;
-			}
-			&.has-background-opacity-40 {
-				opacity: .4;
-			}
-			&.has-background-opacity-50 {
-				opacity: .5;
-			}
-			&.has-background-opacity-60 {
-				opacity: .6;
-			}
-			&.has-background-opacity-70 {
-				opacity: .7;
-			}
-			&.has-background-opacity-80 {
-				opacity: .8;
-			}
-			&.has-background-opacity-90 {
-				opacity: .9;
-			}
-		}
-	}
-
-	h1,
-	p {
-		@include breakpoint( $xs ) {
-			color: $color-grayscale-f;
-		}
-	}
 }
 
 .wp-block-editorial-modal-content {
@@ -110,24 +51,6 @@
 		&::before {
 			color: $color-grayscale-6;
 		}
-	}
-}
-
-.wp-block-editorial-modal-callout-content {
-	max-width: 90%;
-	left: 0;
-	right: 0;
-	margin: 0 auto;
-	padding: 20px;
-
-	@include breakpoint( $xs ) {
-		display: flex;
-		align-items: center;
-		justify-content: center;
-		position: absolute;
-		top: 0;
-		height: 100%;
-		padding: 40px;
 	}
 }
 
@@ -169,5 +92,92 @@
 	bottom: 0;
 	left: 0;
 	z-index: 10000;
+}
+
+// modal callout styles
+
+.wp-block-editorial-modal-callout {
+	@extend %col-full;
+	background: $color-grayscale-e;
+	text-align: center;
+	position: relative;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	height: 100%;
+	flex-wrap: wrap;
+	margin: 60px 0;
+
+
+	.wp-block-editorial-modal-media {
+		position: absolute;
+		height: 100%;
+
+		.wp-block-editorial-modal-image {
+			width: 100%;
+			height: 100%;
+			max-height: 100%;
+		}
+
+		img {
+			object-fit: cover;
+			height: 100%;
+			width: 100%;
+			max-height: 100%;
+
+			&.has-background-opacity-10 {
+				opacity: .1;
+			}
+
+			&.has-background-opacity-20 {
+				opacity: .2;
+			}
+
+			&.has-background-opacity-30 {
+				opacity: .3;
+			}
+
+			&.has-background-opacity-40 {
+				opacity: .4;
+			}
+
+			&.has-background-opacity-50 {
+				opacity: .5;
+			}
+
+			&.has-background-opacity-60 {
+				opacity: .6;
+			}
+
+			&.has-background-opacity-70 {
+				opacity: .7;
+			}
+
+			&.has-background-opacity-80 {
+				opacity: .8;
+			}
+
+			&.has-background-opacity-90 {
+				opacity: .9;
+			}
+		}
+	}
+
+	h1,
+	p {
+		@include breakpoint( $xs ) {
+			color: $color-grayscale-f;
+		}
+	}
+}
+
+.wp-block-editorial-modal-callout-content {
+	z-index: 1000;
+	padding: 80px;
+
+	.button,
+	p:last-of-type {
+		margin-bottom: 0;
+	}
 }
 
